--- a/indexs.html
+++ b/indexs.html
@@ -10,6 +10,7 @@
     <div class="form-container">
         <h2>Registro de Usuario</h2>
         <form id="registrationForm">
+            </label> <br>
             <div class="form-group">
                 <label for="name">Nombre:</label>
                 <input type="text" id="name" name="name">
@@ -21,7 +22,7 @@
                 <input type="email" id="email" name="email">
                 <div class="error-message" id="emailError"></div>
             </div>
-
+</label> <br>
             <div class="form-group">
                 <label for="password">Contraseña:</label>
                 <input type="password" id="password" name="password">
