--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Formulario de Validación Dinámica</title>
-    <link rel="style.css" href="style.css">
+    <link rel="style" href="style.css">
 </head>
 <body>
     <div class="form-container">
@@ -50,4 +50,3 @@
 
     <script src="script.js"></script>
 </body>
-</html><footer>PROGRAMADO POR OMAR MORALES</footer>
