--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Formulario de Validación Dinámica</title>
-    <link rel="style" href="style.css">
+    <link rel="stylesheet" href="style.css"/>
 </head>
 <body>
     <div class="form-container">
@@ -48,5 +48,5 @@
         </form>
     </div>
 
-    <script src="script.js"></script>
+    <script src="scrip.js"></script>
 </body>
